--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
 body {
-  background: ivory;
-  color: gray;
+  background: Ivory;
+  color: Gray;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+p {
+  font-size: 16px;
+  color: DarkBlue;
+  background-color: Lavender;
 }
