--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,11 @@ p {
   color: DarkBlue;
   background-color: Lavender;
 }
+
+ol {
+  list-style-type: upper-roman;
+}
+
+ul {
+  list-style-type: square;
+}
