--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,9 @@ ul {
   list-style-type: square;
 }
 
-div {
+h1.div {
   border-style: dotted;
   border-width: 2px;
+  width: 200px;
+  height: 200px;
 }
