--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,41 @@ body {
   padding: 10px 20px 10px 20px;
 }
 
+header {
+  background: red;
+  display: grid;
+  grid-template-columns: 200px auto;
+}
+
+nav {
+  background: green;
+  padding: 1.2em;
+  line-height: 1.7;
+}
+
+section {
+  background: purple;
+  padding: 1.2em;
+}
+
+article {
+  background: yellow;
+  padding: 1.2em;
+}
+
+aside {
+  background: black;
+  padding: 1.2em;
+}
+
+footer {
+  padding-top: 1.6em;
+  color: #AE6E4E;
+  font-size: 0.9rem;
+  text-align: center;
+  background: blue;
+}
+
 h1 {
   font-size: 35px;
   border-bottom: 1px solid Gray;
